@@ -3,5 +3,6 @@
 class MelonLoader
 {
 public:
+	static HINSTANCE melonloaderdll;
 	static void Initialize();
 };
